--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
