--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,13 @@ JWT_SECRET=super_long_random_secret
 CLOUDINARY_CLOUD_NAME=djnlms40g
 CLOUDINARY_API_KEY=894217887392367
 CLOUDINARY_API_SECRET=fR0UhXZvnuK2OMpYcbngNm7aVpo
+
+# Email (required for Create & Send) NO LONGER USED - WE HAVE GOT A DIFFERENT EMAIL SHARE ROUTE FOR NOW!
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=theioweyouapp@gmail.com
+SMTP_PASS= eryrplbtlrnezwbr              # ozbuurdnmngpmvvb
+FROM_EMAIL=theioweyouapp@gmail.com
+
+# Used to generate the share link you send/copy
+FRONTEND_URL=http://localhost:5192
